--- a/env-details-dev.properties
+++ b/env-details-dev.properties
@@ -1,2 +1,2 @@
-property-file.name = ""
-property-file.description =""
+property-file.name = "sachin"
+property-file.description ="batsman and bowler"
