--- a/env-details.properties
+++ b/env-details.properties
@@ -1,2 +1,2 @@
-property-file.name = "ganguly"
-property-file.description ="captain"
+property-file.name = ganguly
+property-file.description =captain!
